[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "last-sikum"
authors = [{name = "Ma'or Kadosh", email = "git@avocadosh.xyz"}]
dynamic = ["version", "description"]
dependencies = ["pylast==4.5.0", "Pillow==9.0.1", "python-dotenv==0.19.2"]

[project.scripts]
last-sikum = "last_sikum:main"

[tool.pylint.basic]
good-names = ["i", "j", "k", "f", "x", "y", "ex", "Run", "_"]
